# mr-importer-rewrite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: deps.cmake
examples/: render.hpp  render_polyscope.hpp  render_raylib.hpp  rendertest.cpp
include/mr-importer/: assets.cpp  assets.hpp  atomic_unique_ptr.hpp  def.hpp  hash.hpp  importer.hpp  loader.cpp  loader.hpp  manager.hpp  optimizer.cpp  optimizer.hpp  options.hpp
tests/: main.cpp
